--- a/catalog.html
+++ b/catalog.html
@@ -134,15 +134,15 @@
             </div>
             <ul class="first-level " id="mobilemenu">
 
-                <li class="d-none d-md-inline-block"><a href='about-company.html'>О компании</a></li>
-                <li>
-                    <a href='catalog.html' class="d-none d-md-inline-block">Каталог продукции</a>
-                    <ul class="accordion" id="accordionExample">
+                <li><a href='about-company.html'>О компании</a></li>
+                <li class="position-relative has-sub-level-1 active">
+                    <a href='catalog.html'>Каталог продукции</a>
+                    <ul class="accordion d-none d-md-block" id="accordionExample">
                         <li class="has-sub">
                             <div id="heading-1" class="d-md-none">
-                                <a href='gorizontal-zhaluzi.html' class="collapsed" data-toggle="collapse" data-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1">Жалюзи горизонтальные</a>
+                                <a href='gorizontal-zhaluzi.html' class="collapsed" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false" aria-controls="collapse-1">Жалюзи горизонтальные</a>
                             </div>
-                            <div  id="collapse-1" class="collapse show" aria-labelledby="heading-1" data-parent="#accordionExample">
+                            <div  id="collapse-1" class="collapse" aria-labelledby="heading-1" data-parent="#accordionExample">
                                 <ul>
                                     <li><a href='gorizontal-zhaluzi_vid.html'>Аллюминиевые жалюзи</a></li>
                                     <li><a href='gorizontal-zhaluzi_vid.html'>Деревянные жалюзи</a></li>
@@ -275,10 +275,10 @@
                         <li><a href='okna.html'>Окна</a></li>
                     </ul>
                 </li>
-                <li class="d-none d-md-inline-block"><a href='oplata.html'>Оплата и гарантии</a></li>
-                <li class="d-none d-md-inline-block"><a href='polezno.html'>Полезно знать</a></li>
-                <li class="d-none d-md-inline-block"><a href='portfolio.html'>Наши работы</a></li>
-                <li class="d-none d-md-inline-block"><a href='contacts.html'>Контакты</a></li>
+                <li><a href='oplata.html'>Оплата и гарантии</a></li>
+                <li><a href='polezno.html'>Полезно знать</a></li>
+                <li><a href='portfolio.html'>Наши работы</a></li>
+                <li><a href='contacts.html'>Контакты</a></li>
             </ul>
     </div>
     </div>
