--- a/portfolio.html
+++ b/portfolio.html
@@ -134,13 +134,13 @@
             </div>
             <ul class="first-level " id="mobilemenu">
 
-                <li class="d-none d-md-inline-block"><a href='about-company.html'>О компании</a></li>
-                <li>
-                    <a href='catalog.html' class="d-none d-md-inline-block">Каталог продукции</a>
-                    <ul class="accordion" id="accordionExample">
+                <li><a href='about-company.html'>О компании</a></li>
+                <li class="position-relative has-sub-level-1">
+                    <a href='catalog.html'>Каталог продукции</a>
+                    <ul class="accordion d-none d-md-block" id="accordionExample">
                         <li class="has-sub">
                             <div id="heading-1" class="d-md-none">
-                                <a href='gorizontal-zhaluzi.html' class="collapsed" data-toggle="collapse" data-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1">Жалюзи горизонтальные</a>
+                                <a href='gorizontal-zhaluzi.html' class="collapsed" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false" aria-controls="collapse-1">Жалюзи горизонтальные</a>
                             </div>
                             <div  id="collapse-1" class="collapse show" aria-labelledby="heading-1" data-parent="#accordionExample">
                                 <ul>
@@ -275,10 +275,10 @@
                         <li><a href='okna.html'>Окна</a></li>
                     </ul>
                 </li>
-                <li class="d-none d-md-inline-block"><a href='oplata.html'>Оплата и гарантии</a></li>
-                <li class="d-none d-md-inline-block"><a href='polezno.html'>Полезно знать</a></li>
-                <li class="d-none d-md-inline-block"><a href='portfolio.html'>Наши работы</a></li>
-                <li class="d-none d-md-inline-block"><a href='contacts.html'>Контакты</a></li>
+                <li><a href='oplata.html'>Оплата и гарантии</a></li>
+                <li><a href='polezno.html'>Полезно знать</a></li>
+                <li class="active"><a href='portfolio.html'>Наши работы</a></li>
+                <li><a href='contacts.html'>Контакты</a></li>
             </ul>
     </div>
     </div>
@@ -384,67 +384,100 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                    <a class="fancybox" rel="portfolio" href="images/680x451.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-2.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-3.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-2.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-3.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-2.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-3.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-12">
-                               <div class="grid-item grid-item-1">
-                                    <div class="image"><img src="./images/146x220.png" alt=""></div>
+                                <div class="grid-item grid-item-1">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451.jpg" title="Название или короткое описание фото">
+                                        <img src="./images/146x220.png" alt="">
+                                    </a>
+                                    <!--<a class="image fancybox" rel="pallete"><img src="./images/146x220.png" alt=""></a>-->
                                     <div class="caption">Название категории</div>
                                 </div>
                             </div>
