add japonskie-shtory.html and markizy_vid.html. fix bugs

--- a/example.html
+++ b/example.html
@@ -131,7 +131,7 @@
                         <li><a href='#'>Жалюзи вертикальные</a></li>
                         <li><a href='#'>Рулонные шторы</a></li>
                         <li><a href='#'>Римские шторы</a></li>
-                        <li><a href='#'>Японские шторы</a></li>
+                        <li><a href='japonskie-shtory.html'>Японские шторы</a></li>
                         <li><a href='#'>Шторы плиссе</a></li>
                         <li><a href='#'>Маркизы (навесы)</a></li>
                         <li><a href='#'>Защитные роллеты</a></li>
@@ -203,7 +203,7 @@
                     <a href="vertikal-zhaluzi.html">Жалюзи вертикальные</a>
                     <a href="rulon-shtory.html">Рулонные шторы</a>
                     <a href="rim-shtory.html">Римские шторы</a>
-                    <a href="#">Японские шторы</a>
+                    <a href="japonskie-shtory.html">Японские шторы</a>
                 </div>
             </div>
 
