--- a/markizy.html
+++ b/markizy.html
@@ -190,7 +190,7 @@
                                     <li><a href='rulon-shtory_vid.html'>Открытые системы</a></li>
                                     <li><a href='rulon-shtory_vid.html'>Рулонные шторы день-ночь, Зебра</a></li>
                                     <li><a href='rulon-shtory_vid.html'>Система день-ночь, Зебра 3D</a></li>
-                                    <li><a href='rulon-shtory_vid.html'>Каталог тканей</a></li>
+                                    <li><a href='vertikal-zhaluzi_tkani.html'>Каталог тканей</a></li>.col-md-20
                                 </ul>
                             </div>
                             <a href='rulon-shtory.html' class="d-none d-md-block">Рулонные шторы</a>
@@ -199,7 +199,7 @@
                                 <li><a href='rulon-shtory_vid.html'>Открытые системы</a></li>
                                 <li><a href='rulon-shtory_vid.html'>Рулонные шторы день-ночь, Зебра</a></li>
                                 <li><a href='rulon-shtory_vid.html'>Система день-ночь, Зебра 3D</a></li>
-                                <li><a href='rulon-shtory_vid.html'>Каталог тканей</a></li>
+                                <li><a href='vertikal-zhaluzi_tkani.html'>Каталог тканей</a></li>.col-md-20
                             </ul>
                         </li>
                         <li class="has-sub">
@@ -222,7 +222,7 @@
                                 <li><a href='rim-shtory_nanesenie.html'>Шторы с нанесением</a></li>
                             </ul>
                         </li>
-                        <li><a href='#'>Японские шторы</a></li>
+                        <li><a href='japonskie-shtory.html'>Японские шторы</a></li>
                         <li class="has-sub">
                             <div id="heading-5" class="d-md-none">
                                 <a href='plisse-shtory.html'  class="collapsed" data-toggle="collapse" data-target="#collapse-5" aria-expanded="false" aria-controls="collapse-5">Шторы плиссе</a>
@@ -243,32 +243,32 @@
                         </li>
                         <li class="has-sub">
                             <div id="heading-6" class="d-md-none">
-                                <a href='markizy.html'  class="collapsed" data-toggle="collapse" data-target="#collapse-6" aria-expanded="true" aria-controls="collapse-6">Маркизы (навесы)</a>
+                                <a href='markizy.html'  class="collapsed" data-toggle="collapse" data-target="#collapse-6" aria-expanded="false" aria-controls="collapse-6">Маркизы (навесы)</a>
                             </div>
-                            <div id="collapse-6" class="collapse d-md-none show" aria-labelledby="heading-6" data-parent="#accordionExample">
+                            <div id="collapse-6" class="collapse d-md-none" aria-labelledby="heading-6" data-parent="#accordionExample">
                                 <ul>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Система ЗИМНИЙ САД</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>С падающим локтем ATTICA</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Кассетная базовая JUVENTA</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Кассетная система SIROCCO</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Рефлексол VERANDA</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Ковшевая система</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Терассная система Ассоль</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Открытая базовая BREEZ</a></li>
-                                    <li><a href='gorizontal-zhaluzi_vid.html'>Открытая усиленная LIBERTY</a></li>
+                                    <li><a href='markizy_vid.html'>Система ЗИМНИЙ САД</a></li>
+                                    <li><a href='markizy_vid.html'>С падающим локтем ATTICA</a></li>
+                                    <li><a href='markizy_vid.html'>Кассетная базовая JUVENTA</a></li>
+                                    <li><a href='markizy_vid.html'>Кассетная система SIROCCO</a></li>
+                                    <li><a href='markizy_vid.html'>Рефлексол VERANDA</a></li>
+                                    <li><a href='markizy_vid.html'>Ковшевая система</a></li>
+                                    <li><a href='markizy_vid.html'>Терассная система Ассоль</a></li>
+                                    <li><a href='markizy_vid.html'>Открытая базовая BREEZ</a></li>
+                                    <li><a href='markizy_vid.html'>Открытая усиленная LIBERTY</a></li>
                                 </ul>
                             </div>
                             <a href='markizy.html' class="d-none d-md-block">Маркизы (навесы)</a>
                             <ul class="d-none d-md-block">
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Система ЗИМНИЙ САД</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>С падающим локтем ATTICA</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Кассетная базовая JUVENTA</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Кассетная система SIROCCO</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Рефлексол VERANDA</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Ковшевая система</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Терассная система Ассоль</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Открытая базовая BREEZ</a></li>
-                                <li><a href='gorizontal-zhaluzi_vid.html'>Открытая усиленная LIBERTY</a></li>
+                                <li><a href='markizy_vid.html'>Система ЗИМНИЙ САД</a></li>
+                                <li><a href='markizy_vid.html'>С падающим локтем ATTICA</a></li>
+                                <li><a href='markizy_vid.html'>Кассетная базовая JUVENTA</a></li>
+                                <li><a href='markizy_vid.html'>Кассетная система SIROCCO</a></li>
+                                <li><a href='markizy_vid.html'>Рефлексол VERANDA</a></li>
+                                <li><a href='markizy_vid.html'>Ковшевая система</a></li>
+                                <li><a href='markizy_vid.html'>Терассная система Ассоль</a></li>
+                                <li><a href='markizy_vid.html'>Открытая базовая BREEZ</a></li>
+                                <li><a href='markizy_vid.html'>Открытая усиленная LIBERTY</a></li>
                             </ul>
                         </li>
                         <li><a href='rollety.html'>Защитные роллеты</a></li>
@@ -369,7 +369,7 @@
 
 
                             <li>
-                                <a href="#" class="sidebar-catalog-menu-item">Японские
+                                <a href="japonskie-shtory.html" class="sidebar-catalog-menu-item">Японские
                                     шторы </a>
                             </li>
 
@@ -388,15 +388,15 @@
                                 <a href="markizy.html" class="sidebar-catalog-menu-item">Маркизы
                                     (навесы) <span class="caret"></span></a>
                                 <ul class="sub-menu" id="awnings">
-                                    <li><a href="#">Система ЗИМНИЙ САД</a></li>
-                                    <li><a href="#">С падающим локтем ATTICA</a></li>
-                                    <li><a href="#">Кассетная базовая JUVENTA</a></li>
-                                    <li><a href="#">Кассетная система SIROCCO</a></li>
-                                    <li><a href="#">Рефлексол VERANDA</a></li>
-                                    <li><a href="#">Ковшевая система</a></li>
-                                    <li><a href="#">Терассная система Ассоль</a></li>
-                                    <li><a href="#">Открытая базовая BREEZ</a></li>
-                                    <li><a href="#">Открытая усиленная LIBERTY</a></li>
+                                    <li><a href="markizy_vid.html">Система ЗИМНИЙ САД</a></li>
+                                    <li><a href="markizy_vid.html">С падающим локтем ATTICA</a></li>
+                                    <li><a href="markizy_vid.html">Кассетная базовая JUVENTA</a></li>
+                                    <li><a href="markizy_vid.html">Кассетная система SIROCCO</a></li>
+                                    <li><a href="markizy_vid.html">Рефлексол VERANDA</a></li>
+                                    <li><a href="markizy_vid.html">Ковшевая система</a></li>
+                                    <li><a href="markizy_vid.html">Терассная система Ассоль</a></li>
+                                    <li><a href="markizy_vid.html">Открытая базовая BREEZ</a></li>
+                                    <li><a href="markizy_vid.html">Открытая усиленная LIBERTY</a></li>
                                 </ul>
                             </li>
 
@@ -426,7 +426,7 @@
                                             Система ЗИМНИЙ САД<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -441,7 +441,7 @@
                                             С падающим локтем ATTICA<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -456,7 +456,7 @@
                                             Кассетная базовая JUVENTA<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -471,7 +471,7 @@
                                             Кассетная система SIROCCO<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -486,7 +486,7 @@
                                             Рефлексол VERANDA<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -501,7 +501,7 @@
                                             Ковшевая система<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -516,7 +516,7 @@
                                             Террасная система Ассоль<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -531,7 +531,7 @@
                                             Открытая базовая BREEZ<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -546,7 +546,7 @@
                                             Открытая усиленная LIBERTY<br>
                                         </div>
                                         <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                            <a href="markizy_vid.html">Подробнее >></a>
                                         </div>
                                     </div>
                                 </div>
@@ -610,7 +610,7 @@
                     <a href="vertikal-zhaluzi.html">Жалюзи вертикальные</a>
                     <a href="rulon-shtory.html">Рулонные шторы</a>
                     <a href="rim-shtory.html">Римские шторы</a>
-                    <a href="#">Японские шторы</a>
+                    <a href="japonskie-shtory.html">Японские шторы</a>
                 </div>
             </div>
 
